# kfs

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
i386-pc/: config.h  grub-bios-setup  kernel.img
isodir/boot/grub/: grub.cfg
scripts/: debug.gdb
src/: kmain.rs  multiboot.rs  serial.rs  vga.rs
src/arch/: mod.rs
src/arch/x86/: boot.s  gdt.rs  gdt.s  mapping.s  mod.rs  paging.rs  x86.json  x86.ld
src/memory/: mod.rs
src/memory/pmm/: bitmap.rs  mod.rs
src/memory/vmm/: listalloc.rs  mapper.rs  mod.rs
src/utils/: rawbox.rs
