[package]
name = "kfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# build dependencies
[build-dependencies]

[dependencies]

[lib]
name = "kfs"
path = "src/kmain.rs"
crate-type = ["staticlib"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

